--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
         input, button { padding: 10px; margin-top: 10px; }
         input { width: 280px; border: 1px solid #ccc; border-radius: 5px; }
-        button { background-color: #FFD300; color: white; border: none; cursor: pointer; border-radius: 5px; }
+        button { background-color: #FFD300; color: black; border: none; cursor: pointer; border-radius: 5px; }
         footer { 
             background: #f4f4f4; /* Footer matches the email form background */
             color: black; 
