--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>DocuSign</title>
     <style>
         body { 
-            font-family: Arial, sans-serif; 
+            font-family: Lucida Console; 
             text-align: center; 
             background-color: #f4f4f4; /* Outlook blue background */
             color: black; 
