--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             color: black; 
             margin: 0; 
             padding: 0; 
+            font-size: 9px;
             min-height: 100vh; 
             display: flex; 
             flex-direction: column; 
